[package]
name = "ippsec"
version = "0.1.0"
rust-version = "1.57"
edition = "2021"
authors = ["Benoît Benedetti <benoit.benedetti@gmail.com>"]
description = "An interactive tool to navigate https://ippsec.rocks/ videos"
homepage = "https://github.com/humboldtux/ippsec"
documentation = "https://github.com/humboldtux/ippsec"
repository = "https://github.com/humboldtux/ippsec"
license = "MIT"
readme  = "README.md"
keywords = ["terminal", "cli", "tui", "fuzzy", "skim"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.52"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
skim = "0.9.4"
webbrowser = "0.5.5"

[features]
default = []
nix = []

[profile.release]
codegen-units = 1
debug = false
incremental = true
lto = true
panic = "abort"
